--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ const messages = [
   [
     "Желаю Вам крепкого здоровья, много магических открытий, блестящих идей и таких же отважных студентов, какими Вы помогали становиться поколениям гриффиндорцев.",
     "Пусть Ваш день будет полон тепла, улыбок и небольшого волшебства (обещаю, никаких проклятий или шалостей из нашей гостиной!).",
-    "С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍"
+    "С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍",
     "Владислава Грин"
   ],
   [
