--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@ const jamJarSrc = "https://i.ibb.co/GvHNg5vc/Chat-GPT-Image-19-2025-16-38-48.png
 const messages = [
   [
     "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.",
-    "<span style='color:#7b3131'>Дина</span>"
+    "<span style='color:#7b3131'><b>Дина</b></span>"
   ],
   [
     "Джулс, с днем рождения!",
     "Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*",
-    "<span style='color:#7b3131'>Хаттори Райто</span>"
+    "<span style='color:#7b3131'><b>Хаттори Райто</b></span>"
   ],
   [
     "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂",
@@ -310,7 +310,7 @@ function checkDrop(berry) {
 
 // -------------------- БАБЛ --------------------
 function showSteamText() {
-  steamText.innerHTML = messages[bubbleIndex];
+  steamText.innerHTML = messages[bubbleIndex].join("<br><br>");
   bubbleIndex++;
   lastBubble = bubbleIndex >= messages.length;
 
