--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ body {
   pointer-events: none;
   z-index: 25;
   opacity: 1;
-  max-width: 150px;
   width: auto;
   height: auto;
+  display: block;
 }
 
 #steam-text {
