--- a/index.html
+++ b/index.html
@@ -235,7 +235,11 @@ const messages = [
   [
     "Джулс! Желаю тебе сиять, как снитч, добиваться всех целей с таким же рвением, как бладжер, и быть счастливой - совсем как команда, которая только что забила другой победный квоффл. Люблю, с Днём Рождения! <3",
     "<span style='color:#7b3131'><b>Lana Lirovska</b></span>"
+  ],
+  [
+    "А ТЕПЕРЬ, КОЛДУЙ! 👉🏻🪄"
   ]
+  
 ];
 
 let currentBerry = null;
