--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@ body {
   z-index: 30;
   text-align: justify;
   transition: transform 0.5s ease, opacity 0.5s ease;
+
+  max-height: 45vh;
+  overflow-y: auto;
+  padding-right: 14px;
+}
+
+  #steam-text::-webkit-scrollbar {
+  width: 6px;
+}
+#steam-text::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.2);
+  border-radius: 4px;
 }
 
 #small-tip {
