--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ const messages = [
   ],
   [
     "Дорогая Джулс!<br>С днём рождения! Меня восхищает в тебе много вещей от чувства юмора до обостренного чувства справедливости и правильности, и я очень хочу, чтобы ты берегла это в себе. Будь счастлива и добивайся намеченных планов, а еще — пусть рядом всегда будут дорогие сердцу люди!",
-    "С днем рождения! Береги себя и свой невероятный огонь внутри!"
+    "С днем рождения! Береги себя и свой невероятный огонь внутри!",
     "<span style='color:#7b3131'><b>Ариадна Фрост</b></span>"
   ],
   [
