--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ const messages = [
     "<span style='color:#7b3131'><b>Аделин Эйвери</b></span>"
   ],
   [
-    "Дорогая Джулс!<br>Вот ты и стала старше на один год, а это значит, что ты всё ближе к <i>«Мы можем называть её бабулею, а вы зовите её Джулией»</i>. Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает. Люблю!",
+    "Дорогая Джулс!",
+    "Вот ты и стала старше на один год, а это значит, что ты всё ближе к <i>«Мы можем называть её бабулею, а вы зовите её Джулией»</i>. Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает. Люблю!",
     "<span style='color:#7b3131'><b>Леончик</b></span>"
   ],
   [
@@ -157,11 +158,13 @@ const messages = [
   ],
   [
     "Я до сих пор не знаю, как правильно обращаться, поэтому пусть будет так))",
-    "Миссис Джонсон-Шрив-Стиверсон, поздравляю Вас с Днём Рождения! Счастья, пусть все заклинания удаются успешно и часто случаются звездопады, чтобы загадывать много-много желаний, которые обязательно исполнятся!<br>От всей души желаю лично,<br>Вам, как домашнему коту,<br>Чтобы всегда жилось отлично<br>И на работе, и в быту!",
+    "Миссис Джонсон-Шрив-Стиверсон, поздравляю Вас с Днём Рождения! Счастья, пусть все заклинания удаются успешно и часто случаются звездопады, чтобы загадывать много-много желаний, которые обязательно исполнятся!",
+    "От всей души желаю лично,<br>Вам, как домашнему коту,<br>Чтобы всегда жилось отлично<br>И на работе, и в быту!",
     "<span style='color:#7b3131'><b>Грэйс Грейлэнд</b></span>"
   ],
   [
-    "ДЖУУУУУУУУУЛС! Поздравляю тебя с днем рождения!<br>Ты невероятно классный, душевный и приятный человечек, знакомству и общению с которым я очень рад. Хочу, чтобы у тебя всегда было хорошее настроение и все получалось ❤️<br>Но главное - будь счастливой!<br>Очень люблю!!!!!1",
+    "ДЖУУУУУУУУУЛС! Поздравляю тебя с днем рождения!",
+    "Ты невероятно классный, душевный и приятный человечек, знакомству и общению с которым я очень рад. Хочу, чтобы у тебя всегда было хорошее настроение и все получалось ❤️<br>Но главное - будь счастливой!<br>Очень люблю!!!!!1",
     "<span style='color:#7b3131'><b>Кевин Хоукинс</b></span>"
   ],
   [
@@ -174,7 +177,9 @@ const messages = [
     "<span style='color:#7b3131'><b>Джоанна</b></span>"
   ],
   [
-    "Здравствуйте-здравствуйте, дорогая и всеми любимая Джулия Джонсон-Шрив-Стиверсон-обладательница-самой-длинной-фамилии-в-мире! Я хочу поздравить Вас с Днём Рождения!<br>Хоть я вас и совсем не знаю, совсем недавно нахожусь в Хогвартсе, но я уже уверена, что вы и вправду горячо любимы ребятами из Хогвартса Дамблдора!<br>Хочу пожелать вам всего-всего: и удач, и неудач, дабы был балас вселенной! Радуйте учеников, преподователей и многих других людей своей улыбкой и хорошим настроением. Просто будьте счастливы, вот что!",
+    "Здравствуйте-здравствуйте, дорогая и всеми любимая Джулия Джонсон-Шрив-Стиверсон-обладательница-самой-длинной-фамилии-в-мире! Я хочу поздравить Вас с Днём Рождения!",
+    "Хоть я вас и совсем не знаю, совсем недавно нахожусь в Хогвартсе, но я уже уверена, что вы и вправду горячо любимы ребятами из Хогвартса Дамблдора!",
+    "Хочу пожелать вам всего-всего: и удач, и неудач, дабы был балас вселенной! Радуйте учеников, преподователей и многих других людей своей улыбкой и хорошим настроением. Просто будьте счастливы, вот что!",
     "С днём рождения!",
     "<span style='color:#7b3131'><b>Скарлетт Картер</b></span>"
   ],
