--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
   font-family: 'Pangolin', cursive;
   font-size: 16px;
   line-height: 1.4;
-  pointer-events: none;
+  pointer-events: auto;
   z-index: 30;
   text-align: justify;
   transition: transform 0.5s ease, opacity 0.5s ease;
@@ -73,7 +73,7 @@ body {
   width: 6px;
 }
 #steam-text::-webkit-scrollbar-thumb {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.25);
   border-radius: 4px;
 }
 
