--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@ const messages = [
     "<span style='color:#7b3131'><b>Адрианна Сноу</b></span>"
   ],
   [
-    "С днём рождения!<br>Пусть этот день будет таким же особенным, как первое письмо из Хогвартса — неожиданным, долгожданным и полным предвкушения приключений.<br>Желаю тебе жизни, наполненной магией — не той, что прячется в учебниках по Заклинаниям, а той, что делает каждый момент ярче:<br>когда утро начинается с вдохновения,<br>когда рядом появляются люди, будто из твоего собственного ордена,<br>и когда мечты оживают, словно картины на стенах школы.<br>Пусть удача идёт с тобой плечом к плечу, как верный друг —<br>а все тёмные полосы исчезают от одного лёгкого «Люмос».<br>Пусть в твоей истории будет место и для полётов над миром, и для тихих вечеров в своей тёплой башне, где можно налить себе чашку тыквенного сока и просто быть счастливой.<br>Желаю, чтобы каждый новый год твоей жизни был как новый учебный год в Хогвартсе:<br>непредсказуемый, полный открытий, встреч, тайн и маленьких чудес.<br>Чтобы на твоём пути попадались только хорошие люди —<br>и ни один тролль (в прямом и переносном смысле) не смог испортить твоё настроение.<br>Пусть твоя магия будет сильной, желания — смелыми,<br>а душа — свободной, как метла в руках потрясающего игрока.<br>И помни: даже если что-то кажется сложным, ты всегда можешь сказать себе:<br>«Экспекто Патронум» —<br>и впереди обязательно появится свет.",
+    "С днём рождения!<br>Пусть этот день будет таким же особенным, как первое письмо из Хогвартса — неожиданным, долгожданным и полным предвкушения приключений.",
+    "Желаю тебе жизни, наполненной магией — не той, что прячется в учебниках по Заклинаниям, а той, что делает каждый момент ярче: когда утро начинается с вдохновения, когда рядом появляются люди, будто из твоего собственного ордена, и когда мечты оживают, словно картины на стенах школы.",
+    "Пусть удача идёт с тобой плечом к плечу, как верный друг — а все тёмные полосы исчезают от одного лёгкого «Люмос».",
+    "Пусть в твоей истории будет место и для полётов над миром, и для тихих вечеров в своей тёплой башне, где можно налить себе чашку тыквенного сока и просто быть счастливой.",
+    "Желаю, чтобы каждый новый год твоей жизни был как новый учебный год в Хогвартсе: непредсказуемый, полный открытий, встреч, тайн и маленьких чудес. Чтобы на твоём пути попадались только хорошие люди — и ни один тролль (в прямом и переносном смысле) не смог испортить твоё настроение.",
+    "Пусть твоя магия будет сильной, желания — смелыми, а душа — свободной, как метла в руках потрясающего игрока.",
+    "И помни: даже если что-то кажется сложным, ты всегда можешь сказать себе: «Экспекто Патронум» — и впереди обязательно появится свет.",
     "<span style='color:#7b3131'><b>Лили Хардман</b></span>"
   ],
   [
@@ -212,7 +218,7 @@ const messages = [
     "<span style='color:#7b3131'><b>Венди Гренуй</b></span>"
   ],
   [
-    "С днём рождения! Этот день, безусловно, особенный, но я хочу пожелать, чтобы внимание близких, подарки, веселье и лёгкость ты ощущала не только сегодня, но и в каждый свой день — чтобы каждый из них стал для тебя особенным. Пусть в жизни будет больше счастливых моментов, и я уверен, что ты справишься со всеми трудностями на своём пути",
+    "С днём рождения! Этот день, безусловно, особенный, но я хочу пожелать, чтобы внимание близких, подарки, веселье и лёгкость ты ощущала не только сегодня, но и в каждый свой день — чтобы каждый из них стал для тебя особенным. Пусть в жизни будет больше счастливых моментов, и я уверен, что ты справишься со всеми трудностями на своём пути.",
     "<span style='color:#7b3131'><b>Феликс Морган</b></span>"
   ],
   [
@@ -232,7 +238,9 @@ const messages = [
     "<span style='color:#7b3131'><b>Алиас Кроу</b></span>"
   ],
   [
-    "Джулс!<br>Ты — один из тех редких людей, у которых все получается так естественно: вдохновлять, сиять, быть частью команды!<br>Как экс-декан Гриффиндора ты доказала, что храбрость — это не лозунг, а образ жизни. И что иногда настоящий подвиг — это не сразить дракона, а взять ответственность за целый факультет :)  И за целую квиддичную команду! Ты будто родилась с метлой в руках и с интуицией, которая умеет чувствовать снитч за километр! И при этом ты остаёшься невероятно добрым, искренним и настоящим человеком — что, честно говоря, куда сложнее, чем забить квоффл.<br>Хочу пожелать тебе всего того, что обычно приносит квиддич: скорости, драйва, эмоций — но без бладжеров в голову и без судей, которые решили начать матч в 7 утра. Чтобы новый год жизни был таким же ярким, как крылья снитча, таким же тёплым, как вечер после победного матча, и таким же вдохновляющим, как идеальный полёт над стадионом. Пусть рядом будут люди, которые тебя ценят, любят и восхищаются тобой, а жизнь дарит лёгкие взлёты, мягкие посадки и только хорошие совпадения вероятностей.",
+    "Джулс!",
+    "Ты — один из тех редких людей, у которых все получается так естественно: вдохновлять, сиять, быть частью команды!<br>Как экс-декан Гриффиндора ты доказала, что храбрость — это не лозунг, а образ жизни. И что иногда настоящий подвиг — это не сразить дракона, а взять ответственность за целый факультет :)  И за целую квиддичную команду! Ты будто родилась с метлой в руках и с интуицией, которая умеет чувствовать снитч за километр! И при этом ты остаёшься невероятно добрым, искренним и настоящим человеком — что, честно говоря, куда сложнее, чем забить квоффл.",
+    "Хочу пожелать тебе всего того, что обычно приносит квиддич: скорости, драйва, эмоций — но без бладжеров в голову и без судей, которые решили начать матч в 7 утра. Чтобы новый год жизни был таким же ярким, как крылья снитча, таким же тёплым, как вечер после победного матча, и таким же вдохновляющим, как идеальный полёт над стадионом. Пусть рядом будут люди, которые тебя ценят, любят и восхищаются тобой, а жизнь дарит лёгкие взлёты, мягкие посадки и только хорошие совпадения вероятностей.",
     "С днём рождения, Джулс! Ты чудесная — и с каждым годом всё больше <3",
     "<span style='color:#7b3131'><b>Мия Рейган</b></span>"
   ],
@@ -245,7 +253,8 @@ const messages = [
     "<span style='color:#7b3131'><b>Литачка</b></span>"
   ],
   [
-    "Дорогая Джулс!<br>С днём рождения! Меня восхищает в тебе много вещей от чувства юмора до обостренного чувства справедливости и правильности, и я очень хочу, чтобы ты берегла это в себе. Будь счастлива и добивайся намеченных планов, а еще — пусть рядом всегда будут дорогие сердцу люди!",
+    "Дорогая Джулс!",
+    "С днём рождения! Меня восхищает в тебе много вещей от чувства юмора до обостренного чувства справедливости и правильности, и я очень хочу, чтобы ты берегла это в себе. Будь счастлива и добивайся намеченных планов, а еще — пусть рядом всегда будут дорогие сердцу люди!",
     "С днем рождения! Береги себя и свой невероятный огонь внутри!",
     "<span style='color:#7b3131'><b>Ариадна Фрост</b></span>"
   ],
