--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@ body {
   <img id="pot" class="item" src="https://i.ibb.co/6JyrTSmY/rfcnh-kz1.gif" alt="Кастрюля" />
   <img id="wand" class="item" src="https://i.ibb.co/BVRr2VR2/Chat-GPT-Image-19-2025-08-36-05.png" alt="Волшебная палочка" />
 
+  <button id="music-btn" style="
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px 18px;
+  font-size: 16px;
+  background-color: #7b3131;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 100;
+">
+  Включить музыку
+</button>
+
   <div id="steam-text">
     <h2 style="color:#7b3131; margin:0 0 8px 0; font-size:22px;">
       Ягодка, мы рады приветствовать тебя на волшебной кухне!
