--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
   <button id="music-btn" style="
   position: fixed;
   top: 10px;
-  right: 10px;
+  left: 10px;
   padding: 10px 18px;
   font-size: 16px;
   background-color: #7b3131;
@@ -109,7 +109,7 @@ body {
   cursor: pointer;
   z-index: 100;
 ">
-  Включить музыку
+  🎺
 </button>
 
   <div id="steam-text">
@@ -216,7 +216,8 @@ const messages = [
     "<span style='color:#7b3131'><b>Адрианна Сноу</b></span>"
   ],
   [
-    "С днём рождения!<br>Пусть этот день будет таким же особенным, как первое письмо из Хогвартса — неожиданным, долгожданным и полным предвкушения приключений.",
+    "С днём рождения!",
+    "Пусть этот день будет таким же особенным, как первое письмо из Хогвартса — неожиданным, долгожданным и полным предвкушения приключений.",
     "Желаю тебе жизни, наполненной магией — не той, что прячется в учебниках по Заклинаниям, а той, что делает каждый момент ярче: когда утро начинается с вдохновения, когда рядом появляются люди, будто из твоего собственного ордена, и когда мечты оживают, словно картины на стенах школы.",
     "Пусть удача идёт с тобой плечом к плечу, как верный друг — а все тёмные полосы исчезают от одного лёгкого «Люмос».",
     "Пусть в твоей истории будет место и для полётов над миром, и для тихих вечеров в своей тёплой башне, где можно налить себе чашку тыквенного сока и просто быть счастливой.",
@@ -255,7 +256,8 @@ const messages = [
   ],
   [
     "Джулс!",
-    "Ты — один из тех редких людей, у которых все получается так естественно: вдохновлять, сиять, быть частью команды!<br>Как экс-декан Гриффиндора ты доказала, что храбрость — это не лозунг, а образ жизни. И что иногда настоящий подвиг — это не сразить дракона, а взять ответственность за целый факультет :)  И за целую квиддичную команду! Ты будто родилась с метлой в руках и с интуицией, которая умеет чувствовать снитч за километр! И при этом ты остаёшься невероятно добрым, искренним и настоящим человеком — что, честно говоря, куда сложнее, чем забить квоффл.",
+    "Ты — один из тех редких людей, у которых все получается так естественно: вдохновлять, сиять, быть частью команды!",
+    "Как экс-декан Гриффиндора ты доказала, что храбрость — это не лозунг, а образ жизни. И что иногда настоящий подвиг — это не сразить дракона, а взять ответственность за целый факультет :)  И за целую квиддичную команду! Ты будто родилась с метлой в руках и с интуицией, которая умеет чувствовать снитч за километр! И при этом ты остаёшься невероятно добрым, искренним и настоящим человеком — что, честно говоря, куда сложнее, чем забить квоффл.",
     "Хочу пожелать тебе всего того, что обычно приносит квиддич: скорости, драйва, эмоций — но без бладжеров в голову и без судей, которые решили начать матч в 7 утра. Чтобы новый год жизни был таким же ярким, как крылья снитча, таким же тёплым, как вечер после победного матча, и таким же вдохновляющим, как идеальный полёт над стадионом. Пусть рядом будут люди, которые тебя ценят, любят и восхищаются тобой, а жизнь дарит лёгкие взлёты, мягкие посадки и только хорошие совпадения вероятностей.",
     "С днём рождения, Джулс! Ты чудесная — и с каждым годом всё больше <3",
     "<span style='color:#7b3131'><b>Мия Рейган</b></span>"
